--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-Flask==0.12.2
-Flask-Cors==3.0.3
-itsdangerous==0.24
-numpy==1.13.3
-pandas==0.21.0
-requests==2.18.4
-scikit-learn==0.19.1
-scipy==1.0.0
-xmltodict==0.11.0
+Flask
+Flask-Cors
+numpy
+pandas
+requests
+scikit-learn
+scipy
+xmltodict
